--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				</div>
 				<div class="habout">
 					<div class="row">
-						<div class="col-xl-6">
+						<div class="col-xl-6 col-lg-6">
 							<div class="habout__content mb-30">
 								<h3>Welcome to Our Company</h3>
 								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi fugit iusto
@@ -165,7 +165,7 @@
 									debitis odit aliquam non voluptatum possimus repellat atque laudantium asperiores
 									minima adipisci quod, soluta ab commodi, quas eaque aperiam provident?</p>
 								<div class="row">
-									<div class="col-xl-6">
+									<div class="col-xl-6 col-lg-6">
 										<ul>
 											<li><i class="far fa-thumbs-up"></i> Awesome Design</li>
 											<li><i class="far fa-thumbs-up"></i> Better Client Service</li>
@@ -173,7 +173,7 @@
 											<li><i class="far fa-thumbs-up"></i> Digital Marketing & Branding</li>
 										</ul>
 									</div>
-									<div class="col-xl-6">
+									<div class="col-xl-6 col-lg-6">
 										<ul>
 											<li><i class="far fa-thumbs-up"></i> Awesome Design</li>
 											<li><i class="far fa-thumbs-up"></i> Better Client Service</li>
@@ -187,7 +187,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-6">
+						<div class="col-xl-6 col-lg-6">
 							<div class="habout__img mb-30">
 								<img src="assets/img/about.jpg" alt="" class="img-fluid">
 							</div>
@@ -196,7 +196,7 @@
 				</div>
 				<div class="ability mt-80">
 					<div class="row">
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="ability__single mb-30">
 								<h4>Mission</h4>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad
@@ -206,7 +206,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="ability__single mb-30">
 								<h4>Vision</h4>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad
@@ -216,7 +216,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="ability__single mb-30">
 								<h4>History</h4>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad
@@ -235,13 +235,13 @@
 		<div class="features-area pt-120 pb-90 feature-1">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-xl-6">
+					<div class="col-xl-6 col-lg-6">
 						<div class="section-title text-center mb-50">
 							<span>Highly Create Solutions</span>
 							<h2>We are Digital</h2>
 						</div>
 						<div class="row">
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -249,7 +249,7 @@
 										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -257,7 +257,7 @@
 										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -265,7 +265,7 @@
 										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -282,13 +282,13 @@
 		<div class="features-area pt-120 pb-90 feature-2">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-xl-6 ml-auto">
+					<div class="col-xl-6 col-lg-6 ml-auto">
 						<div class="section-title text-center mb-50">
 							<span>Highly Create Solutions</span>
 							<h2>We are Creative</h2>
 						</div>
 						<div class="row text-center">
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -296,7 +296,7 @@
 										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -304,7 +304,7 @@
 										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -312,7 +312,7 @@
 										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
-							<div class="col-xl-6">
+							<div class="col-xl-6 col-lg-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
@@ -343,7 +343,7 @@
 				</div>
 				<div class="services mt-40">
 					<div class="row">
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="services__single mb-30">
 								<i class="fal fa-newspaper"></i>
 								<h3>web solutions</h3>
@@ -351,7 +351,7 @@
 									perferendis voluptates. </p>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="services__single mb-30">
 								<i class="far fa-globe-asia"></i>
 								<h3>web Security</h3>
@@ -359,7 +359,7 @@
 									perferendis voluptates. </p>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="services__single mb-30">
 								<i class="fal fa-band-aid"></i>
 								<h3>web solutions</h3>
@@ -367,7 +367,7 @@
 									perferendis voluptates. </p>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="services__single mb-30">
 								<i class="fad fa-mobile"></i>
 								<h3>web solutions</h3>
@@ -375,7 +375,7 @@
 									perferendis voluptates. </p>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="services__single mb-30">
 								<i class="fad fa-search-location"></i>
 								<h3>web solutions</h3>
@@ -383,7 +383,7 @@
 									perferendis voluptates. </p>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="services__single mb-30">
 								<i class="fal fa-chart-line-down"></i>
 								<h3>web solutions</h3>
@@ -410,25 +410,25 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-process mb-30">
 							<h3>Design <span>1</span></h3>
 							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
 						</div>
 					</div>
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-process mb-30">
 							<h3>Development <span>2</span></h3>
 							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
 						</div>
 					</div>
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-process mb-30">
 							<h3>Testing <span>3</span></h3>
 							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
 						</div>
 					</div>
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-process mb-30">
 							<h3>Final <span>1</span></h3>
 							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
@@ -452,7 +452,7 @@
 				</div>
 				<div class="projects">
 					<div class="row no-gutters">
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="projects__item">
 								<img src="assets/img/project1.jpg" alt="project-1">
 								<div class="projects__item-overlay">
@@ -464,7 +464,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="projects__item">
 								<img src="assets/img/project2.jpg" alt="project-2">
 								<div class="projects__item-overlay">
@@ -476,7 +476,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="projects__item">
 								<img src="assets/img/project3.jpg" alt="project-3">
 								<div class="projects__item-overlay">
@@ -488,7 +488,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="projects__item">
 								<img src="assets/img/project4.jpg" alt="project-4">
 								<div class="projects__item-overlay">
@@ -500,7 +500,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="projects__item">
 								<img src="assets/img/project5.jpg" alt="project-5">
 								<div class="projects__item-overlay">
@@ -512,7 +512,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="projects__item">
 								<img src="assets/img/project6.jpg" alt="project-6">
 								<div class="projects__item-overlay">
@@ -533,28 +533,28 @@
 		<div class="counter-area black-bg pt-100 pb-70">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-counter mb-30">
 							<i class="fas fa-briefcase"></i>
 							<span class="counter">543</span>
 							<h4>projects</h4>
 						</div>
 					</div>
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-counter mb-30">
 							<i class="fal fa-award"></i>
 							<span class="counter">79</span>
 							<h4>Awards</h4>
 						</div>
 					</div>
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-counter mb-30">
 							<i class="fal fa-users"></i>
 							<span class="counter">79</span>
 							<h4>clients</h4>
 						</div>
 					</div>
-					<div class="col-xl-3">
+					<div class="col-xl-3 col-lg-3">
 						<div class="single-counter mb-30">
 							<i class="fal fa-coffee"></i>
 							<span class="counter">4120</span>
@@ -579,7 +579,7 @@
 				</div>
 				<div class="teamMembers">
 					<div class="row">
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="teamMembers__item mb-30">
 								<img src="assets/img/team1.jpg" alt="img-1">
 								<div class="teamMembers__item-overlay">
@@ -587,19 +587,19 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="teamMembers__item mb-30">
 								<img src="assets/img/team2.jpg" alt="img-1">
 								<div class="teamMembers__item-overlay">
-									<h3>Jone Doe <span>Web Developer</span></h3>
+									<h3>Moynul Islam <span>Web Developer</span></h3>
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="teamMembers__item mb-30">
 								<img src="assets/img/team3.jpg" alt="img-1">
 								<div class="teamMembers__item-overlay">
-									<h3>Jone Doe <span>Web Developer</span></h3>
+									<h3>Shopon Ahmed <span>Web Developer</span></h3>
 								</div>
 							</div>
 						</div>
@@ -612,7 +612,7 @@
 		<div class="video-area black-bg pt-80 pb-80">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-7 mx-auto">
+					<div class="col-xl-7 col-lg-7 mx-auto">
 						<div class="video-content text-center">
 							<a href="https://www.youtube.com/watch?v=-Cqmbb6pAWs" class="popup-video"><i
 									class="fas fa-play"></i></a>
@@ -641,7 +641,7 @@
 				</div>
 				<div class="prices">
 					<div class="row">
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="prices__item">
 								<span>standard</span>
 								<h3>$25 <span>month</span></h3>
@@ -657,7 +657,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="prices__item featured">
 								<span>premium</span>
 								<h3>$25 <span>month</span></h3>
@@ -673,7 +673,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="prices__item">
 								<span>stller plus</span>
 								<h3>$25 <span>month</span></h3>
@@ -770,7 +770,7 @@
 				</div>
 				<div class="blogs">
 					<div class="row">
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="blogs__item">
 								<div class="blogs__item-img">
 									<img src="assets/img/blog1.jpg" alt="blog-1">
@@ -789,7 +789,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="blogs__item">
 								<div class="blogs__item-img">
 									<img src="assets/img/blog2.jpg" alt="blog-2">
@@ -808,7 +808,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-4">
+						<div class="col-xl-4 col-lg-4">
 							<div class="blogs__item">
 								<div class="blogs__item-img">
 									<img src="assets/img/blog3.jpg" alt="blog-3">
@@ -866,7 +866,7 @@
 				</div>
 				<div class="contacts">
 					<div class="row">
-						<div class="col-xl-6">
+						<div class="col-xl-6 col-lg-6">
 							<div class="contacts__social">
 								<i class="fal fa-map-marker-alt"></i>
 								<h4>address <span>Flotowstr. 5006284 Lutherstadt Eisleben</span></h4>
@@ -884,7 +884,7 @@
 								<h4>website <span>ProgramLocal.de</span></h4>
 							</div>
 						</div>
-						<div class="col-xl-6">
+						<div class="col-xl-6 col-lg-6">
 							<div class="contacts__form">
 								<form action="#">
 									<input type="text" name="name" id="name" placeholder="Name">
@@ -930,7 +930,7 @@
 						<a href=""><i class="fab fa-linkedin-in"></i></a>
 						<a href=""><i class="fab fa-github-alt"></i></a>
 					</div>
-					<p>&copy; All Right Reserved 2021, Designed By md.sujon ahmed</p>
+					<p>&copy; All Right Reserved 2021, Designed By md. sujon ahmed</p>
 				</div>
 			</div>
 		</div>
